# mot-benchmark-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_JA.md  main.py  pyproject.toml
scripts/: evaluate.py  interpolation.py  prepare_dataset.py  run_benchmark.sh  run_python_boosttracker.py  run_python_bytetracker.py  run_yolox_detection.py
src/: mot_benchmark.rs
